# SmartWardobe

./: .gitignore  README.md  output.mkv
Arduino/: Arduino.ino  schematic.schdoc  smartWardrobe.ino
Arduino/smartWadrobe/smartWardrobe/: Smartwadrobe.ino  smartWardrobe.ino
Arduino/smartwadrobearduino/: smartwadrobearduino.ino
FaceRecognition/: README.md
SmartWardrobeGUI/: CMakeLists.txt  README.md  resources.qrc
SmartWardrobeGUI/data/: wardrobe.db  wardrobe.db-journal
SmartWardrobeGUI/face_detection_plugin/: CMakeLists.txt  CvPluginInterface.h  face_detection_plugin.cpp  face_detection_plugin.h
SmartWardrobeGUI/include/: AppConstants.h  AppModel.h  MainWindow.h  QCameraCapture.h  QCameraWidget.h  QDataHandler.h  QFaceInfor.h  QFaceInforWidget.h  QFaceRecognition.h  QMqttHandler.h  QWardrobeWidget.h
SmartWardrobeGUI/src/: AppModel.cpp  MainWindow.cpp  QCameraCapture.cpp  QCameraWidget.cpp  QDataHandler.cpp  QFaceInfor.cpp  QFaceInforWidget.cpp  QFaceRecognition.cpp  QMqttHandler.cpp  QWardrobeWidget.cpp  WardrobeDB.cpp  main.cpp
SmartWardrobeGUI/ui/: mainwindow.ui  qaddfacedialog.ui  qcamerawidget.ui  qfaceinforwidget.ui  qwardrobewidget.ui
build-SmartWardrobeGUI-Desktop-Default/: CMakeCache.txt  Makefile  SmartWardrobeGUI  SmartWardrobeGUI.cbp  cmake_install.cmake  ui_mainwindow.h  ui_qaddfacedialog.h  ui_qcamerawidget.h  ui_qfaceinforwidget.h  ui_qwardrobewidget.h
build-SmartWardrobeGUI-Desktop-Default/SmartWardrobeGUI_autogen/: mocs_compilation.cpp
build-SmartWardrobeGUI-Desktop-Default/SmartWardrobeGUI_autogen/6YEA5652QU/: moc_AppModel.cpp  moc_MainWindow.cpp  moc_QAddFaceDialog.cpp  moc_QCameraCapture.cpp  moc_QCameraWidget.cpp  moc_QDataHandler.cpp  moc_QFaceInforWidget.cpp  moc_QFaceRecognition.cpp  moc_QWardrobeWidget.cpp
